# pixelcreep

./: Cargo.toml  LICENSE  Makefile  build.rs
.github/workflows/: release.yml
src/: file_types.rs  main.rs
src/app_ui/: drag_drop.rs  editor_state.rs  image_picker.rs  mod.rs  pixel_sort.rs  recent.rs  selection.rs  status.rs
src/config/: mod.rs
src/processing/: adjust.rs  asdf_sort.rs  compose.rs  decode.rs  mod.rs  portal_sort.rs
ui/: app.slint  theme.slint  types.slint
ui/components/: checkbox.slint  mini_slider.slint  slider.slint
ui/components/import_page/: drop_zone.slint
ui/components/pixel_sort_page/: aspect_image_viewport.slint  section_head.slint  sort_method_selector.slint
ui/components/pixel_sort_page/sort_method_params/: none.slint  panel.slint  portal.slint  threshold.slint
ui/pages/: import_page.slint  pixel_sort_page.slint
