[package]
name = "pixelcreep"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = { version = "1.16", features = ["unstable-winit-030", "image-default-formats"] }
rfd = "0.15"
image = "0.25"
rayon = "1.10"
rand = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
slint-build = "1.16"

[profile.dev-fast]
inherits = "dev"
opt-level = 0
debug = 0
lto = false
incremental = true
codegen-units = 256
